<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="100dp"
    android:layout_marginHorizontal="16dp"
    android:stretchColumns="1">

    <!-- Row 1 - Location and Language -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Column 1 - Location -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_linear_gradient">

                    <RadioGroup
                        android:id="@+id/rgLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/rbGPS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gps"/>

                        <RadioButton
                            android:id="@+id/rbMap"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- Column 2 - Language -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_linear_gradient">

                    <RadioGroup
                        android:id="@+id/rgLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/rbEnglish"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/english"/>

                        <RadioButton
                            android:id="@+id/rbArabic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/arabic"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </TableRow>

    <!-- Row 2 - Temperature and Wind Speed -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Column 1 - Notifications -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_linear_gradient">

                    <RadioGroup
                        android:id="@+id/rgNotifications"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/rbEnable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enable"/>

                        <RadioButton
                            android:id="@+id/rbDisable"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disable"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <!-- Column 2 - Wind Speed -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/btnWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"/>

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_linear_gradient">

                    <RadioGroup
                        android:id="@+id/rgWindSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/rbMeterPerSecond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/meter_sec"/>

                        <RadioButton
                            android:id="@+id/rbMilePerHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mile_hour"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </TableRow>

    <!-- Row 3 - Notifications -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <!-- Column 1 - Temperature -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="8dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"/>

            <androidx.cardview.widget.CardView

                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/card_linear_gradient">

                    <RadioGroup
                        android:id="@+id/rgTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <RadioButton
                            android:id="@+id/rbCelsius"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/celsius"/>

                        <RadioButton
                            android:id="@+id/rbKelvin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kelvin"/>

                        <RadioButton
                            android:id="@+id/rbFahrenheit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fahrenheit"/>
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>



    </TableRow>
</TableLayout>
