<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear_gradient"
    tools:context=".features.home.view.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.weather_deatils.view.FavoriteDetails">


        <!-- Weather Card -->
        <LinearLayout
            android:id="@+id/favoriteCountryAndDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/favoriteCountryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/unknown"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/favoriteTodayDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/favoriteWeatherCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteCountryAndDateLayout">

            <LinearLayout
                android:id="@+id/favoriteCardBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_linear_gradient"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/favoriteWeatherIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/favoriteTemperatureText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="48sp" />

                <TextView
                    android:id="@+id/favoriteWeatherDescriptionText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/favoriteRecyclerWeatherCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteWeatherCard">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_linear_gradient"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_24_hour_forecast"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/favoriteRecyclerViewHourlyWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Hourly Weather Section -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecyclerViewDailyWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favoriteRecyclerWeatherCard" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/black"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            card_view:cardCornerRadius="16dp"
            card_view:cardElevation="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/favoriteRecyclerViewDailyWeather">

            <LinearLayout
                android:id="@+id/favoriteFeaturesCardBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_linear_gradient"
                android:orientation="vertical" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:padding="10dp"
                android:rowCount="2">

                <!-- Pressure Item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <ImageView

                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_pressure" />

                    <TextView
                        android:id="@+id/favoritePressureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Humidity Item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_humidity" />

                    <TextView
                        android:id="@+id/favoriteHumidityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@android:color/darker_gray"

                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Wind Item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_wind" />

                    <TextView
                        android:id="@+id/favoriteWindText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Cloud Item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:paddingVertical="10dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_cloud" />

                    <TextView
                        android:id="@+id/favoriteCloudText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cloud"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="18sp" />
                </LinearLayout>


            </GridLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>


